--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,29 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_home">Pago Con Tarjeta</string>
+    <string name="menu_gallery">Gasolina</string>
+    <string name="menu_slideshow">Dosis</string>
+
+    <string name="menu_total">Total</string>
+    <string name="menu_impuesto">Impuesto</string>
+    <string name="menu_cobro">Cobro</string>
+
+    <string name="menu_costo">Costo</string>
+    <string name="menu_ganancia">Ganancia</string>
+    <string name="menu_venta">Venta</string>
+
+    <string name="rb_semana">Semana</string>
+    <string name="rb_campaña">Campaña</string>
+    <string name="rb_ruta">Ruta</string>
+    <string name="rb_moto">Moto</string>
+
+
+    <string name="title_semana">Semana</string>
+    <string name="title_campaña">Campaña</string>
+    <string name="title_ruta">Ruta</string>
+    <string name="title_dinero">$ 0.00</string>
+
+    <string name="btn_calc">Calc</string>
+    <string name="btn_clen">Clean</string>
 </resources>
