--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="menu_home">Pago Con Tarjeta</string>
     <string name="menu_gallery">Gasolina</string>
     <string name="menu_slideshow">Dosis</string>
+    <string name="menu_responsivas">Responsivas</string>
 
     <string name="menu_total">Total</string>
     <string name="menu_impuesto">Impuesto</string>
