--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="menu_gallery">Gasolina</string>
     <string name="menu_slideshow">Dosis</string>
     <string name="menu_responsivas">Responsivas</string>
+    <string name="menu_add_paciente">Agregar Paciente</string>
 
     <string name="menu_total">Total</string>
     <string name="menu_impuesto">Impuesto</string>
@@ -33,6 +34,14 @@
 
     <string name="btn_calc">Calc</string>
     <string name="btn_clen">Clean</string>
+
+
+    <string name="txtField_nombre">Nombre</string>
+    <string name="txtField_especie">Especie</string>
+    <string name="txtField_raza">Raza</string>
+    <string name="txtField_fecha_nacimiento">Fecha Nacimiento</string>
+    <string name="txtField_edad">Edad</string>
+    <string name="txtField_peso">Peso</string>
 
 
 
