--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,4 +129,7 @@
 
 
     <string name="default_notification_channel_id">1010</string>
+
+
+    <string name="title_notification">Domicilios Pendientes</string>
 </resources>
