--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,4 +111,5 @@
 
 
     <string name="title_notification">Domicilios Pendientes</string>
+    <string name="txtField_color">Color</string>
 </resources>
