cambios para agregar productos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,14 @@
 
     <string name="title_notification">Domicilios Pendientes</string>
     <string name="txtField_color">Color</string>
+
+
+
+    <!-- Mensajes de error para validación -->
+    <string name="error_field_required">Este campo es requerido</string>
+    <string name="error_invalid_email">Ingrese una dirección de correo electrónico válida</string>
+    <string name="error_invalid_password">La contraseña debe tener al menos 8 caracteres</string>
+    <string name="error_password_mismatch">Las contraseñas no coinciden</string>
+    <string name="error_invalid_phone">Ingrese un número de teléfono válido</string>
+    <!-- Puedes agregar más mensajes según tus necesidades -->
 </resources>
