--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -153,6 +153,7 @@
     <string name="txt_fecha">Fecha de Agregado</string>
     <string name="txt_descripcion_producto">Descripción del Producto</string>
     <string name="txt_unidad_medida_producto">Unidad de Medida</string>
+    <string name="error_invalid_quantity_or_unit">La cantidad o la unidad de medida son inválidas.</string>
     <!-- ADD PRODUCTO -->
 
 </resources>
