--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
 
     <string name="menu_paciente">Paciente</string>
     <string name="menu_cliente">Cliente</string>
+    <string name="menu_cliente_detalle">Detalle del Cliente</string>
     <string name="menu_gasolina">Gasolina</string>
     <string name="menu_pago_tarjeta">Pago Con Tarjeta</string>
 
