--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,12 +26,11 @@
 
     <string name="menu_paciente">Pacientes</string>
     <string name="menu_cliente">Clientes</string>
+    <string name="menu_cerrar_sesion">Cerrar sesión</string>
     <string name="menu_cliente_detalle">Detalle del Cliente</string>
     <string name="menu_paciente_detalle">Detalle del Paciente</string>
     <string name="menu_gasolina">Gasolina</string>
     <string name="menu_pago_tarjeta">Pago Con Tarjeta</string>
-
-
 
 
     <string name="menu_add_mascota">Agregar Mascota</string>
@@ -109,7 +108,6 @@
     <string name="txtField_venta">Venta</string>
 
 
-
     <string name="txtField_domicilio">Domicilio</string>
     <string name="txtField_fecha">Fecha</string>
     <string name="txtField_kilometros">Kilometros</string>
@@ -152,12 +150,9 @@
     <string name="txtField_color">Color</string>
 
 
-
     <!-- Mensajes de error para validación -->
     <string name="error_field_required">Este campo es requerido</string>
-    <string name="error_invalid_email">Ingrese una dirección de correo electrónico válida</string>
     <string name="error_invalid_password">La contraseña debe tener al menos 8 caracteres</string>
-    <string name="error_password_mismatch">Las contraseñas no coinciden</string>
     <string name="error_invalid_phone">Ingrese un número de teléfono válido</string>
     <!-- Puedes agregar más mensajes según tus necesidades -->
 
@@ -228,4 +223,44 @@
 
     <string name="error_invalid_date_format">Formato de fecha inválido. Utilice el formato dd/MM/yyyy.</string>
 
+    <!-- LoginFragment -->
+    <string name="msg_login_success">¡Inicio de sesión exitoso!</string>
+    <string name="msg_login_failed">La autenticación ha fallado. Por favor, intenta nuevamente.</string>
+    <string name="msg_login_empty_email">Por favor, introduce tu correo electrónico.</string>
+    <string name="msg_login_invalid_email">Formato de correo electrónico no válido.</string>
+    <string name="msg_login_empty_password">Por favor, introduce tu contraseña.</string>
+    <string name="msg_login_short_password">La contraseña debe tener al menos 6 caracteres.</string>
+    <string name="btn_ok">Aceptar</string>
+    <string name="txt_view_login_title">¡Bienvenido a Katzen! Cuidamos lo que más amas.</string>
+    <string name="btn_login">Iniciar Sesión</string>
+    <string name="txt_no_account">¿No tienes una cuenta?</string>
+    <string name="txt_sign_in">Registrarse</string>
+    <string name="txt_forgot_password">¿Olvidaste tu contraseña?</string>
+
+    <string name="txt_correo">Correo Electrónico</string>
+    <string name="txt_contraseña">Contraseña</string>
+
+    <string name="dialog_reset_password_title">Recuperar Contraseña</string>
+    <string name="dialog_reset_password_message">Ingresa tu correo electrónico para recibir un enlace de recuperación de contraseña.</string>
+    <string name="input_hint_email">Correo electrónico</string>
+    <string name="btn_send">Enviar</string>
+    <string name="btn_cancel">Cancelar</string>
+    <string name="msg_reset_email_sent">Correo de recuperación enviado.</string>
+    <string name="msg_reset_email_error">Error al enviar el correo de recuperación.</string>
+    <string name="snackbar_exit_prompt">Presiona de nuevo para salir</string>
+
+    <!-- Error messages -->
+    <string name="error_empty_email">El correo electrónico no puede estar vacío.</string>
+    <string name="error_invalid_email">El correo electrónico no es válido.</string>
+    <string name="error_empty_password">La contraseña no puede estar vacía.</string>
+    <string name="error_short_password">La contraseña debe tener al menos 8 caracteres.</string>
+    <string name="error_long_password">La contraseña no puede tener más de 20 caracteres.</string>
+    <string name="error_no_case_variation">La contraseña debe contener al menos una letra mayúscula y una minúscula.</string>
+    <string name="error_no_number">La contraseña debe contener al menos un número.</string>
+    <string name="error_no_special_characters">La contraseña debe contener al menos un carácter especial.</string>
+    <string name="error_password_contains_email">La contraseña no puede contener el nombre de usuario.</string>
+    <string name="error_password_mismatch">Las contraseñas no coinciden.</string>
+    <string name="error_terms_not_accepted">Debes aceptar los términos y condiciones para continuar.</string>
+    <string name="error_registration_failed">El registro falló. Inténtalo de nuevo.</string>
+    <string name="thank_you_for_registering">¡Gracias por unirte a nuestra comunidad!</string>
 </resources>
